# TaskDaemon

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c  message.c  message.h  receiver  receiver.c  sender  sender.c  taskcli  taskcli.c  taskd  taskd.c  test
.cmake/api/v1/reply/: cache-v2-df983cd9f376867bca39.json  cmakeFiles-v1-322864d8de00d56158a1.json  codemodel-v2-3ef9572cd5bca421fcac.json  index-2023-05-06T16-37-54-0283.json  target-message-Debug-1e13b1ac03230f20208d.json  target-receiver-Debug-9db42fc715a91a1258e9.json  target-sender-Debug-c687605078958f38cc82.json  target-taskcli-Debug-81359db0214af533ed18.json  target-taskd-Debug-01278a1ebc350b1229da.json
Make/: Makefile  Makefile2
